src/test/deca/context/valid/def_affect/cast-bool-bool.deca
// Description:
//    Cast valide.
//
// Resultats:
//    b true

{
    boolean b = (boolean) (true);
}