src/test/deca/context/invalid/print/printlnx-incompatible.deca
// Description:
//    Programme minimaliste d'un booleen comme parametre de printlx.
//
// Resultats:
//    Erreur ligne 9

{
    boolean a = true;
    printlnx(a);
}